[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvforecast"
version = "1.0.0"
description = "Walk-forward realized volatility forecasting for US equities"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Alexander Long" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "scipy>=1.13",
    "yfinance>=1.3",
    "pandas-datareader>=0.10",
    "statsmodels>=0.14",
    "arch>=7",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
lstm = ["torch>=2.6"]
shap = ["shap>=0.45"]
dev = ["pytest>=8.2", "black>=24.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
